Added an edge case

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="app.css" />
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
   </head>
-  <body style="overflow: hidden">
+  <body>
     <div class="nav-images">
       <img src="images/logo.svg" alt="brand logo" />
       <img src="images/icon-menu.svg" alt="hamburger logo" class="hamburger" />
@@ -27,7 +27,7 @@
         <li class="dropdown__list">
           <div class="nav__links-flex">
             <a href="#">Features</a>
-            <img src="images/icon-arrow-down.svg" alt="#" />
+            <img class="menu-icon" src="images/icon-arrow-down.svg" alt="#" />
           </div>
           <div class="dropdown dropdown-hidden">
             <ul>
