--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- FAVICON -->
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
+    />
+
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap"
+      rel="stylesheet"
     />
     <!-- JS -->
     <script src="JS/main.js" defer></script>
@@ -82,5 +91,26 @@
         <button class="register">Register</button>
       </div>
     </nav>
+    <main class="main">
+      <img
+        class="main__image"
+        src="images/image-hero-mobile.png"
+        alt="hero image"
+      />
+      <div class="main__content">
+        <h1 class="main__content-title">Make remote work</h1>
+        <p class="main__content-description">
+          Get your team in sync, no matter your location. Streamline processes,
+          create team rituals, and watch productivity soar.
+        </p>
+        <button class="main__content-btn">Learn more</button>
+      </div>
+      <div class="main__clients">
+        <img src="images/client-databiz.svg" alt="client 1" />
+        <img src="images/client-audiophile.svg" alt="client 2" />
+        <img src="images/client-meet.svg" alt="client 3" />
+        <img src="images/client-maker.svg" alt="client 4" />
+      </div>
+    </main>
   </body>
 </html>
